After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745975 - stopping gdm doesn't stop it's sessions
stopping gdm doesn't stop it's sessions
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-10 17:11 UTC by Ray Strode [halfline]
Modified: 2015-11-06 19:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
manager: clean up manager in dispose not finalize (9.24 KB, patch)
2015-03-10 17:11 UTC, Ray Strode [halfline]
none Details | Review
worker: kill session on SIGTERM (2.90 KB, patch)
2015-03-10 17:11 UTC, Ray Strode [halfline]
none Details | Review
manager: make sure to explicitly close user sessions in dispose (3.04 KB, patch)
2015-03-10 17:11 UTC, Ray Strode [halfline]
none Details | Review
manager: NULL unreferenced objects in dispose (4.36 KB, patch)
2015-03-30 23:18 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2015-03-10 17:11:08 UTC
if you run systemctl stop gdm it doesn't kill the displays.
Comment 1 Ray Strode [halfline] 2015-03-10 17:11:11 UTC
Created attachment 299035 [details] [review]
manager: clean up manager in dispose not finalize

Seems more appropriate.
Comment 2 Ray Strode [halfline] 2015-03-10 17:11:15 UTC
Created attachment 299036 [details] [review]
worker: kill session on SIGTERM

I guess in the past the session has implicitly gone away
when the display goes away, but now that the display is started
implicitly by the session that isn't really true anymore.

We need to explicitly kill the session when gdm is shutting down.
Comment 3 Ray Strode [halfline] 2015-03-10 17:11:19 UTC
Created attachment 299037 [details] [review]
manager: make sure to explicitly close user sessions in dispose

We don't want ref count leaks to lead to unkilled sessions.
Comment 4 Ray Strode [halfline] 2015-03-10 17:11:47 UTC
Attachment 299035 [details] pushed as e06ea3c - manager: clean up manager in dispose not finalize
Attachment 299036 [details] pushed as 095c3a9 - worker: kill session on SIGTERM
Attachment 299037 [details] pushed as f9c438c - manager: make sure to explicitly close user sessions in dispose

There's still a ref count leak I need to deal with.
Comment 5 Ray Strode [halfline] 2015-03-30 23:18:07 UTC
Created attachment 300636 [details] [review]
manager: NULL unreferenced objects in dispose

Now that we're using a dispose handler instead of a finalize handler,
we need to make sure we nullify our objects after unrefing them.
Comment 6 Ray Strode [halfline] 2015-03-30 23:19:09 UTC
Comment on attachment 300636 [details] [review]
manager: NULL unreferenced objects in dispose

Attachment 300636 [details] pushed as b48e39e - manager: NULL unreferenced objects in dispose