manager: clean up manager in dispose not finalize

Seems more appropriate.

https://bugzilla.gnome.org/show_bug.cgi?id=745975