daemon/gdm-manager.c
@@ -102,7 +102,7 @@ static guint signals [LAST_SIGNAL] = { 0, };
 
 static void     gdm_manager_class_init  (GdmManagerClass *klass);
 static void     gdm_manager_init        (GdmManager      *manager);
-static void     gdm_manager_finalize    (GObject         *object);
+static void     gdm_manager_dispose     (GObject         *object);
 static void create_seed_session_for_display (GdmManager *manager,
                                              GdmDisplay *display,
                                              uid_t       allowed_user);
@@ -2213,7 +2213,7 @@ gdm_manager_class_init (GdmManagerClass *klass)
         object_class->get_property = gdm_manager_get_property;
         object_class->set_property = gdm_manager_set_property;
         object_class->constructor = gdm_manager_constructor;
-        object_class->finalize = gdm_manager_finalize;
+        object_class->dispose = gdm_manager_dispose;
 
         signals [DISPLAY_ADDED] =
                 g_signal_new ("display-added",
@@ -2298,7 +2298,7 @@ finish_display (const char *id,
 }
 
 static void
-gdm_manager_finalize (GObject *object)
+gdm_manager_dispose (GObject *object)
 {
         GdmManager *manager;
 
@@ -2313,8 +2313,13 @@ gdm_manager_finalize (GObject *object)
         g_clear_object (&manager->priv->xdmcp_factory);
 #endif
         g_clear_object (&manager->priv->local_factory);
-        g_hash_table_unref (manager->priv->open_reauthentication_requests);
-        g_hash_table_unref (manager->priv->transient_sessions);
+        g_clear_pointer (&manager->priv->open_reauthentication_requests,
+                         (GDestroyNotify)
+                         g_hash_table_unref);
+        g_clear_pointer (&manager->priv->transient_sessions,
+                         (GDestroyNotify)
+                         g_hash_table_unref);
+
         g_list_free_full (manager->priv->user_sessions, (GDestroyNotify) g_object_unref);
         manager->priv->user_sessions = NULL;
 
@@ -2343,9 +2348,9 @@ gdm_manager_finalize (GObject *object)
         g_clear_object (&manager->priv->connection);
         g_clear_object (&manager->priv->object_manager);
 
-        g_object_unref (manager->priv->display_store);
+        g_clear_object (&manager->priv->display_store);
 
-        G_OBJECT_CLASS (gdm_manager_parent_class)->finalize (object);
+        G_OBJECT_CLASS (gdm_manager_parent_class)->dispose (object);
 }
 
 GdmManager *
